--- a/p4.html
+++ b/p4.html
@@ -11,7 +11,7 @@
 <body>
     <div id="reactappHeader"></div>
     <div id="reactapp"></div>
-    <script src="compiled/gettingStarted.bundle.js"></script>
+    <script src="compiled/p4.bundle.js"></script>
 </body>
 
 </html>
